tests/NormalTests/paczka1/small_fuzzy/43255494.err
Error in line 1: 7Ag5xRaR A724 45,8
Error in line 5: mQU A572 78,0
Error in line 9: VBCR5 A572 16,5
